--- a/app/src/main/res/layout/activity_student_details.xml
+++ b/app/src/main/res/layout/activity_student_details.xml
@@ -5,5 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".StudentDetailsActivity">
-
+    <include layout = "@layout/header_layout"/>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="#353E71"
+        android:backgroundTint="#3F4B90"
+        android:text="THIS IS A BANNER"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
