--- a/app/src/main/res/layout/activity_students_list.xml
+++ b/app/src/main/res/layout/activity_students_list.xml
@@ -7,6 +7,7 @@
     tools:context=".StudentsListActivity">
 
     <include
+        android:id="@+id/headerLayout"
         layout="@layout/header_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,5 +20,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/headerLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
