--- a/app/src/main/res/layout/activity_students_list.xml
+++ b/app/src/main/res/layout/activity_students_list.xml
@@ -21,4 +21,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/headerLayout" />
+
+    <ImageView
+        android:id="@+id/addStudentButton"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/studentRecyclerList"
+        app:layout_constraintEnd_toEndOf="@+id/studentRecyclerList"
+        app:srcCompat="@drawable/plus_button" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
