--- a/app/src/main/res/layout/activity_edit_student.xml
+++ b/app/src/main/res/layout/activity_edit_student.xml
@@ -7,7 +7,7 @@
     tools:context=".EditStudentActivity">
 
     <include
-        android:id="@+id/headerLayoutStudentDetails"
+        android:id="@+id/headerLayoutEditStudent"
         layout="@layout/header_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +20,7 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="14dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headerLayoutStudentDetails"
+        app:layout_constraintTop_toBottomOf="@+id/headerLayoutEditStudent"
         app:srcCompat="@drawable/student_image" />
 
     <TextView
@@ -69,7 +69,7 @@
 
     <EditText
         android:id="@+id/nameValueEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="15dp"
@@ -80,7 +80,7 @@
 
     <EditText
         android:id="@+id/idValueEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="4dp"
@@ -91,7 +91,7 @@
 
     <EditText
         android:id="@+id/phoneValueEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="4dp"
@@ -102,7 +102,7 @@
 
     <EditText
         android:id="@+id/addressValueEdit"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="4dp"
@@ -116,7 +116,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:clickable="false"
+        android:clickable="true"
         android:text="checked"
         android:textSize="26sp"
         app:layout_constraintStart_toStartOf="parent"
